--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+html {
+    font-family: 'Karla', sans-serif;
+    font-size: .9em;
+    color: rgb(0, 0, 0, .86);
+}
+
+.container {
+    max-width: 960px;
+    width: 100%;
+}
