--- a/src/app/layout/movies-layout.component.html
+++ b/src/app/layout/movies-layout.component.html
@@ -6,7 +6,7 @@
     </header>
 
     <main class="main" fxLayout="row" fxLayoutAlign="center start">
-        <div class="container">
+        <div class="container" fxFlex>
             <router-outlet></router-outlet>
         </div>
     </main>
