--- a/src/app/components/shared/pagination/pagination.component.scss
+++ b/src/app/components/shared/pagination/pagination.component.scss
@@ -12,5 +12,5 @@
 
 .pagination .mat-button.btn-page.active {
     background-color: #2196f3;
-    color: rgb(255, 255, 255, .86);
+    color: rgba(255, 255, 255, .86);
 }
