--- a/src/app/components/movie-details/movie-details.component.html
+++ b/src/app/components/movie-details/movie-details.component.html
@@ -1,3 +1,8 @@
-<p>
-  movie-details works!
-</p>
+<div class="watch-container">
+    <div class="video-container">
+        <video controls>
+            <source src="https://www.w3schools.com/htmL/mov_bbb.mp4">
+        </video>
+        <h1>Video Title</h1>
+    </div>
+</div>
