--- a/src/app/components/movies/movies.component.scss
+++ b/src/app/components/movies/movies.component.scss
@@ -15,8 +15,25 @@
 .movie-details .attachment {
     position: relative;
     height: 100%;
-    box-shadow: 0 3px 8px -4px rgba(0, 0, 0, .26);
+    box-shadow: 0 3px 8px -4px rgba(0, 0, 0, .2);
     border-radius: 2px;
+}
+
+.movie-details .attachment:hover .movie-details-overlay {
+    opacity: 1;
+}
+
+.movie-details-overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .26);
+    opacity: 0;
+    -webkit-transition: opacity .25s ease-in-out;
+    -moz-transition: opacity .25s ease-in-out;
+    -ms-transition: opacity .25s ease-in-out;
+    -o-transition: opacity .25s ease-in-out;
+    transition: opacity .25s ease-in-out;
 }
 
 .movie-details-progressbar {
@@ -35,7 +52,7 @@
 }
 
 .movie-details footer {
-    padding: 1.4rem 0;
+    padding: .75rem 0;
 }
 
 .movie-details footer a {
