--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,11 +1,22 @@
 <header class="header" fxLayout="row" fxLayoutAlign="center center">
-    <div fxLayout="row" style="position: absolute; left: 1.4rem;">
-        <a routerLink="/">
-            <h1>Movies</h1>
-        </a>
-        <span style="color: crimson; font-weight: bold; font-size: 2em;">.</span>
-    </div>
     <div class="container" fxLayout="row" fxLayoutAlign="space-between center">
-        <input class="search" type="text" placeholder="Search">
+        <div fxLayout="row" style="padding-right: 3rem;">
+            <a routerLink="/">
+                <h1>Movies</h1>
+            </a>
+            <span style="color: crimson; font-weight: bold; font-size: 2em;">.</span>
+        </div>
+        <div class="navigation" fxLayout="row" fxLayoutAlign="space-around center" fxFlex>
+            <button mat-button class="active">Home</button>
+            <button mat-button>Sites</button>
+            <button mat-button>Categories</button>
+        </div>
+        <div fxLayout="row" fxLayoutAlign="end center" fxFlex>
+            <input class="search" [class.active]="showSearchBar" type="text" placeholder="Search">
+            <button mat-icon-button (click)="showSearch()">
+                <mat-icon *ngIf="!showSearchBar">search</mat-icon>
+                <mat-icon *ngIf="showSearchBar">clear</mat-icon>
+            </button>
+        </div>
     </div>
 </header>
