--- a/src/app/layout/movies-layout.component.scss
+++ b/src/app/layout/movies-layout.component.scss
@@ -6,6 +6,7 @@
     min-height: calc(100vh - 65px * 2);
     padding: 4.2rem 0 1.4rem;
     box-shadow: 0 -5px 5px -5px rgba(0, 0, 0, 0.26);
+    z-index: 1;
 }
 
 .footer {
