--- a/src/app/components/movies/movies.component.scss
+++ b/src/app/components/movies/movies.component.scss
@@ -19,6 +19,12 @@
     border-radius: 2px;
 }
 
+.attachment .thumbnail {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 .movie-details .attachment:hover .movie-details-overlay {
     opacity: 1;
 }
@@ -53,6 +59,8 @@
 
 .movie-details footer {
     padding: .75rem 0;
+    box-sizing: border-box;
+    max-height: 50px;
 }
 
 .movie-details footer a {
