--- a/src/app/layout/movies-layout.component.html
+++ b/src/app/layout/movies-layout.component.html
@@ -6,6 +6,16 @@
     </header>
 
     <main class="main" fxLayout="row" fxLayoutAlign="center start">
+        <!-- <div style="width: 300px;">
+            <header>
+                <h1>Studios</h1>
+            </header>
+            <main>
+                <div>Studio Name 1</div>
+                <div>Studio Name 1</div>
+                <div>Studio Name 1</div>
+            </main>
+        </div> -->
         <div class="container" fxFlex>
             <router-outlet></router-outlet>
         </div>
