--- a/src/app/layout/movies-layout.component.html
+++ b/src/app/layout/movies-layout.component.html
@@ -5,22 +5,28 @@
         </div>
     </header>
 
-    <main class="main" fxLayout="row" fxLayoutAlign="center start">
-        <!-- <div style="width: 300px;">
-            <header>
-                <h1>Studios</h1>
-            </header>
-            <main>
-                <div>Studio Name 1</div>
-                <div>Studio Name 1</div>
-                <div>Studio Name 1</div>
-            </main>
-        </div> -->
+    <!-- <main class="main" fxLayout="row" fxLayoutAlign="center start">
+        <div style="width: 300px; background: rgb(250, 250, 250); position: absolute; left: 0; padding: .75rem;">
+            <movies-studio-list></movies-studio-list>
+        </div>
         <div class="container" fxFlex>
             <router-outlet></router-outlet>
         </div>
+    </main> -->
+    <main class="main">
+        <mat-sidenav-container style="min-height: calc(100vh - 65px * 2); background: white;">
+            <mat-sidenav #sidenav mode="side" opened="true" style="width: 300px; background: rgb(245, 245, 245);">
+                <movies-studio-list></movies-studio-list>
+            </mat-sidenav>
+            <mat-sidenav-content style="max-height: calc(100vh - 65px * 2); padding: 1.4rem 0; box-sizing: border-box;">
+                <div fxLayout="row" fxLayoutAlign="center start">
+                    <div class="container">
+                        <router-outlet></router-outlet>
+                    </div>
+                </div>
+            </mat-sidenav-content>
+        </mat-sidenav-container>
     </main>
-
     <footer class="footer" fxLayout="row" fxLayoutAlign="center center">
         <div class="container">
             <span class="copyright">© 2018 Movies</span>
