--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,5 +1,6 @@
 .header {
-    background: white; // box-shadow: 0 3px 8px -4px rgba(0, 0, 0, .26);
+    background: white;
+    box-shadow: 0 3px 8px -4px rgba(0, 0, 0, .26);
     padding: .7rem;
     position: relative;
 }
