--- a/src/app/layout/movies-layout.component.scss
+++ b/src/app/layout/movies-layout.component.scss
@@ -2,15 +2,20 @@
     min-height: 100vh;
 }
 
+.header {
+    z-index: 10;
+}
+
 .main {
-    min-height: calc(100vh - 65px * 2);
-    // padding: 4.2rem 0 1.4rem;
-    box-shadow: 0 -5px 5px -5px rgba(0, 0, 0, 0.26);
-    z-index: 1;
+    min-height: calc(100vh - 60px); // padding: 4.2rem 0 1.4rem;
+    // box-shadow: 0 -5px 5px -5px rgba(0, 0, 0, 0.26);
+    // z-index: 1;
 }
 
 .footer {
     padding: 1.4rem .7rem;
+    position: absolute;
+    bottom: 0;
 }
 
 .copyright {
@@ -22,4 +27,12 @@
 .main,
 .footer {
     width: 100%;
+}
+
+.sidenav-container {
+    min-height: calc(100vh - 60px);
+    height: 100%;
+    overflow-y: hidden;
+    position: relative;
+    box-sizing: border-box;
 }
