--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="header" fxLayout="row" fxLayoutAlign="center center">
+<!-- <header class="header" fxLayout="row" fxLayoutAlign="center center">
     <div class="container" fxLayout="row" fxLayoutAlign="space-between center">
         <div fxLayout="row" style="padding-right: 3rem;">
             <a routerLink="/">
@@ -17,6 +17,35 @@
                 <mat-icon *ngIf="!showSearchBar">search</mat-icon>
                 <mat-icon *ngIf="showSearchBar">clear</mat-icon>
             </button>
+        </div>
+    </div>
+</header> -->
+
+<header class="header" fxLayout="row" fxLayoutAlign="center center">
+    <div style="width: 300px;" fxLayout="row" fxLayoutAlign="space-between center">
+        <div fxLayout="row" style="padding-right: 3rem;">
+            <a routerLink="/">
+                <h1>Movies</h1>
+            </a>
+            <span style="color: crimson; font-weight: bold; font-size: 2em;">.</span>
+        </div>
+    </div>
+    <div style="box-sizing: border-box;" fxLayout="row" fxLayoutAlign="center center" fxFlex>
+        <div class="container">
+            <div class="navigation" fxLayout="row" fxLayoutAlign="start center" *ngIf="!showSearchBar" fxFlex>
+                <button mat-button class="active">Home</button>
+                <button mat-button>Sites</button>
+                <button mat-button>Categories</button>
+            </div>
+            <div fxLayout="row" fxLayoutAlign="end center" fxFlex>
+                <form (ngSubmit)="searchMovies()" [formGroup]="formGroup">
+                    <input formControlName="searchQuery" class="search" [class.active]="showSearchBar" type="text" placeholder="Search">
+                </form>
+                <button (click)="showSearch()" style="background: transparent; border: none; padding: 0; margin: 0; outline: none; cursor: pointer;">
+                    <mat-icon *ngIf="!showSearchBar">search</mat-icon>
+                    <mat-icon *ngIf="showSearchBar">clear</mat-icon>
+                </button>
+            </div>
         </div>
     </div>
 </header>
