--- a/src/app/components/movies/movies.component.html
+++ b/src/app/components/movies/movies.component.html
@@ -1,6 +1,7 @@
 <div class="movies">
     <header class="movies-header" fxLayout="row" fxLayoutAlign="space-between center">
-        <h1>Latest updates</h1>
+        <h1 *ngIf="!searchQuery">Latest updates</h1>
+        <h1 *ngIf="searchQuery">Results for: {{searchQuery}}</h1>
     </header>
     <main class="movies-content" *ngIf="movies && movies.data;">
         <mat-grid-list cols="3" rowHeight="5:4" gutterSize="25px">
@@ -9,11 +10,11 @@
                     <!-- <mat-progress-bar class="movie-details-progressbar" mode="determinate" [value]="(movie.selectedAttachment * 100) / movie.attachments.length" *ngIf="movie.attachments.length > 1"></mat-progress-bar> -->
                     <a class="attachment" [routerLink]="['/watch', movies.studio.objectId, movie.objectId]" mat-ripple (mouseenter)="mouseenter(movie)" (mouseleave)="mouseleave(movie)">
                         <div class="movie-details-overlay"></div>
-                        <!-- <img class="thumbnail" [src]="movie.attachments[movie.selectedAttachment]?.url" *ngIf="!isVideo(movie.attachments[movie.selectedAttachment]?.url)">
+                        <img class="thumbnail" [src]="movie.attachments[movie.selectedAttachment]?.url" *ngIf="!isVideo(movie.attachments[movie.selectedAttachment]?.url)">
                         <video class="thumbnail" *ngIf="isVideo(movie.attachments[movie.selectedAttachment]?.url)" loop autoplay muted>
                             <source src="{{movie.attachments[movie.selectedAttachment]?.url}}">
-                        </video> -->
-                        <img class="thumbnail" src="https://instagram.flwo1-1.fna.fbcdn.net/vp/946c7325cb62cebd713968adea09c591/5BE08F3C/t51.2885-15/e35/36161176_2234290910164232_3781309952090439680_n.jpg">
+                        </video>
+                        <!-- <img class="thumbnail" src="https://instagram.flwo1-1.fna.fbcdn.net/vp/946c7325cb62cebd713968adea09c591/5BE08F3C/t51.2885-15/e35/36161176_2234290910164232_3781309952090439680_n.jpg"> -->
                     </a>
                     <footer>
                         <a [routerLink]="['/watch', movie.id]" title="{{movie.title}}">{{movie.title | truncate:50 }}</a>
