--- a/src/app/layout/movies-layout.component.html
+++ b/src/app/layout/movies-layout.component.html
@@ -16,14 +16,16 @@
     <main class="main">
         <mat-sidenav-container class="sidenav-container">
             <mat-sidenav #sidenav mode="side" opened="true" style="width: 300px; background: rgb(245, 245, 245);">
-                <movies-studio-list></movies-studio-list>
+                <div style="padding-top: 2.8rem;">
+                    <movies-studio-list></movies-studio-list>
+                </div>
                 <footer class="footer" fxLayout="row" fxLayoutAlign="center center">
                     <div class="container">
                         <span class="copyright">© 2018 Movies</span>
                     </div>
                 </footer>
             </mat-sidenav>
-            <mat-sidenav-content style="height: calc(100vh - 65px); padding: 1.4rem 0; max-height: calc(100vh - 65px); box-sizing: border-box;" fxLayout="row" fxLayoutAlign="center start">
+            <mat-sidenav-content style="height: calc(100vh - 65px); padding: 2.8rem 0 1.4rem 0; max-height: calc(100vh - 65px); box-sizing: border-box;" fxLayout="row" fxLayoutAlign="center start">
                 <div class="container">
                     <router-outlet></router-outlet>
                 </div>
