--- a/src/app/components/movies/movies.component.html
+++ b/src/app/components/movies/movies.component.html
@@ -1,29 +1,42 @@
-<div class="movies">
-    <header class="movies-header" fxLayout="row" fxLayoutAlign="space-between center">
-        <h1 *ngIf="!searchQuery">Latest updates</h1>
-        <h1 *ngIf="searchQuery">Results for: {{searchQuery}}</h1>
-    </header>
-    <main class="movies-content" *ngIf="movies && movies.data;">
-        <mat-grid-list cols="3" rowHeight="5:4" gutterSize="25px">
+<header class="movies-header" fxLayout="row" fxLayoutAlign="space-between center">
+    <h1 *ngIf="!searchQuery">Latest updates</h1>
+    <h1 *ngIf="searchQuery">Results for: {{searchQuery}}</h1>
+</header>
+<main *ngIf="movies && movies.data;">
+    <!-- <mat-grid-list cols="3" rowHeight="5:4" gutterSize="25px">
             <mat-grid-tile *ngFor="let movie of movies.data; trackBy: trackMovie;">
                 <div class="movie-details" fxLayout="column">
-                    <!-- <mat-progress-bar class="movie-details-progressbar" mode="determinate" [value]="(movie.selectedAttachment * 100) / movie.attachments.length" *ngIf="movie.attachments.length > 1"></mat-progress-bar> -->
                     <a class="attachment" [routerLink]="['/watch', movies.studio.objectId, movie.objectId]" mat-ripple (mouseenter)="mouseenter(movie)" (mouseleave)="mouseleave(movie)">
                         <div class="movie-details-overlay"></div>
-                        <img class="thumbnail" [src]="movie.attachments[movie.selectedAttachment]?.url" *ngIf="!isVideo(movie.attachments[movie.selectedAttachment]?.url)">
                         <video class="thumbnail" *ngIf="isVideo(movie.attachments[movie.selectedAttachment]?.url)" loop autoplay muted>
-                            <source src="{{movie.attachments[movie.selectedAttachment]?.url}}">
+                            <source src="https://res.cloudinary.com/dpfmyl1mn/video/upload/v1507137526/photocloud/prod/lanafeshchuk/svug6bgevnebjbndgfpt.mp4">
                         </video>
-                        <!-- <img class="thumbnail" src="https://instagram.flwo1-1.fna.fbcdn.net/vp/946c7325cb62cebd713968adea09c591/5BE08F3C/t51.2885-15/e35/36161176_2234290910164232_3781309952090439680_n.jpg"> -->
+                        <img class="thumbnail" src="https://res.cloudinary.com/dpfmyl1mn/image/upload/v1531688331/photocloud/prod/lanafeshchuk/hn8swc9taiasrctj1mqz.jpg" *ngIf="!isVideo(movie.attachments[movie.selectedAttachment]?.url)">
                     </a>
                     <footer>
                         <a [routerLink]="['/watch', movie.id]" title="{{movie.title}}">{{movie.title | truncate:50 }}</a>
                     </footer>
                 </div>
             </mat-grid-tile>
-        </mat-grid-list>
-    </main>
-    <footer class="movies-footer" fxLayout="row" fxLayoutAlign="center center" *ngIf="movies && movies.data;">
-        <movies-pagination [total]="movies.total" [currentPage]="pageIndex" [pageSize]="movies.data.length" (changed)="changePage($event)"></movies-pagination>
-    </footer>
-</div>
+        </mat-grid-list> -->
+    <div class="movies-gallery">
+        <div *ngFor="let movie of movies.data; trackBy: trackMovie;">
+            <div class="movie-item" (mouseenter)="mouseenter(movie)" (mouseleave)="mouseleave(movie)">
+                <!-- <img class="movie-thumbnail" [src]="movie.attachments[movie.selectedAttachment]?.url" alt="media-image" *ngIf="media?.attachments[0].type !== 1" (click)="openPostDialog(media)">
+                    <video class="movie-thumbnail" *ngIf="media?.attachments[0].type === 1" (click)="openPostDialog(media)">
+                        <source src="{{movie.attachments[movie.selectedAttachment]?.url}}">
+                    </video> -->
+                <img class="movie-thumbnail" src="https://res.cloudinary.com/dpfmyl1mn/image/upload/v1531688331/photocloud/prod/lanafeshchuk/hn8swc9taiasrctj1mqz.jpg" *ngIf="!isVideo(movie.attachments[movie.selectedAttachment]?.url)">
+                <video class="movie-thumbnail" *ngIf="isVideo(movie.attachments[movie.selectedAttachment]?.url)" loop autoplay muted>
+                    <source src="https://res.cloudinary.com/dpfmyl1mn/video/upload/v1507137526/photocloud/prod/lanafeshchuk/svug6bgevnebjbndgfpt.mp4">
+                </video>
+            </div>
+            <footer class="movie-details">
+                <a [routerLink]="['/watch', movie.id]" title="{{movie.title}}">{{movie.title | truncate:50 }}</a>
+            </footer>
+        </div>
+    </div>
+</main>
+<footer class="movies-footer" fxLayout="row" fxLayoutAlign="center center" *ngIf="movies && movies.data;">
+    <movies-pagination [total]="movies.total" [currentPage]="pageIndex" [pageSize]="movies.data.length" (changed)="pageChanged($event)"></movies-pagination>
+</footer>
