--- a/src/app/components/movies/movies.component.scss
+++ b/src/app/components/movies/movies.component.scss
@@ -25,21 +25,21 @@
     object-fit: cover;
 }
 
-.movie-details .attachment:hover .movie-details-overlay {
-    opacity: 1;
-}
-
 .movie-details-overlay {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, .26);
+    background-color: rgba(0, 0, 0, .16);
     opacity: 0;
     -webkit-transition: opacity .25s ease-in-out;
     -moz-transition: opacity .25s ease-in-out;
     -ms-transition: opacity .25s ease-in-out;
     -o-transition: opacity .25s ease-in-out;
     transition: opacity .25s ease-in-out;
+}
+
+.movie-details .attachment:hover .movie-details-overlay {
+    opacity: 1;
 }
 
 .movie-details-progressbar {
@@ -57,15 +57,59 @@
     background-color: transparent;
 }
 
-.movie-details footer {
+footer.movie-details {
     padding: .75rem 0;
     box-sizing: border-box;
     max-height: 50px;
 }
 
-.movie-details footer a {
+footer.movie-details a {
     color: inherit;
     font-size: 1.1em;
     font-weight: bold;
     text-decoration: none;
 }
+
+.movies-gallery {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-gap: 30px;
+}
+
+.movie-item {
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+    height: 200px;
+    box-shadow: 0 3px 8px -3px rgba(0, 0, 0, 0.26);
+}
+
+.movie-item:after {
+    content: "";
+    display: block;
+    padding-bottom: 100%;
+}
+
+.movie-thumbnail {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    vertical-align: bottom;
+    border-radius: 2px;
+}
+
+// .movie-item img.movie-thumbnail,
+// .movie-item video.movie-thumbnail {
+//     max-width: 100%;
+//     -webkit-transition: transform .3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+//     -moz-transition: transform .3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+//     transition: transform .3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+// }
+// .movie-item:hover img.movie-thumbnail,
+// .movie-item:hover video.movie-thumbnail {
+//     -moz-transform: scale(1.1);
+//     -webkit-transform: scale(1.1);
+//     transform: scale(1.1);
+// }
