--- a/src/app/components/studio-list/studio-list.component.html
+++ b/src/app/components/studio-list/studio-list.component.html
@@ -1,12 +1,10 @@
-<div style="padding: 1.4rem 0;">
-    <header style="padding: 0 .7rem 1.4rem;">
-        <h1>Studios</h1>
-    </header>
-    <main fxLayout="column">
-        <mat-selection-list>
-            <mat-list-option *ngFor="let studio of studios | async">
-                {{studio.name}}
-            </mat-list-option>
-        </mat-selection-list>
-    </main>
-</div>
+<header style="padding: 0 .7rem 1.4rem;">
+    <h1>Studios</h1>
+</header>
+<main fxLayout="column">
+    <mat-nav-list>
+        <mat-list-item [class.active]="activeStudio && activeStudio.id == studio.id" *ngFor="let studio of studios | async" (click)="select(studio)">
+            {{studio.name}}
+        </mat-list-item>
+    </mat-nav-list>
+</main>
