--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,8 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 html {
     /* font-family: 'Karla', sans-serif; */
-    font-family: 'Lora', serif;
+    /* font-family: 'Lora', serif; */
+    font-family: 'Open Sans', serif;
     font-size: .9em;
     color: rgb(0, 0, 0, .86);
 }
