--- a/src/app/components/studio-list/studio-list.component.html
+++ b/src/app/components/studio-list/studio-list.component.html
@@ -1,5 +1,5 @@
-<header style="padding: 0 .7rem 1.4rem;">
-    <h1>Studios</h1>
+<header class="studios-header">
+    <h2 class="studios-title">Studios</h2>
 </header>
 <main fxLayout="column">
     <mat-nav-list>
