--- a/src/app/components/movies/movies.component.html
+++ b/src/app/components/movies/movies.component.html
@@ -4,19 +4,19 @@
 </header>
 <main *ngIf="movies && movies.data;">
     <div class="movies-gallery" [class.loading]="isLoading">
-        <div *ngFor="let movie of movies.data; trackBy: trackMovie;">
-            <div class="movie-item" (mouseenter)="mouseenter(movie)" (mouseleave)="mouseleave(movie)">
-                <img class="movie-thumbnail" [src]="movie.attachments[movie.selectedAttachment]?.url" alt="media-image" *ngIf="!isVideo(movie.attachments[movie.selectedAttachment]?.url)">
+        <div *ngFor="let movie of movies.data; trackBy: trackMovie;" (mouseenter)="mouseenter(movie)" (mouseleave)="mouseleave(movie)">
+            <div mat-ripple class="movie-item">
+                <!-- <img class="movie-thumbnail" [src]="movie.attachments[movie.selectedAttachment]?.url" alt="media-image" *ngIf="!isVideo(movie.attachments[movie.selectedAttachment]?.url)">
                 <video class="movie-thumbnail" *ngIf="isVideo(movie.attachments[movie.selectedAttachment]?.url)" loop autoplay muted>
                     <source src="{{movie.attachments[movie.selectedAttachment]?.url}}">
-                </video>
-                <div style="position: absolute; top: .5rem; right: .5rem; border-radius: 2px; background-color: rgba(0, 0, 0, .26); color: rgba(255, 255, 255, .86); padding: .25rem;">
-                    <span>{{movie.duration}}</span>
-                </div>
-                <!-- <img class="movie-thumbnail" src="https://res.cloudinary.com/dpfmyl1mn/image/upload/v1531688331/photocloud/prod/lanafeshchuk/hn8swc9taiasrctj1mqz.jpg" *ngIf="!isVideo(movie.attachments[movie.selectedAttachment]?.url)">
+                </video> -->
+                <img class="movie-thumbnail" src="https://res.cloudinary.com/dpfmyl1mn/image/upload/v1531688331/photocloud/prod/lanafeshchuk/hn8swc9taiasrctj1mqz.jpg" *ngIf="!isVideo(movie.attachments[movie.selectedAttachment]?.url)">
                 <video class="movie-thumbnail" *ngIf="isVideo(movie.attachments[movie.selectedAttachment]?.url)" loop autoplay muted>
                     <source src="https://res.cloudinary.com/dpfmyl1mn/video/upload/v1507137526/photocloud/prod/lanafeshchuk/svug6bgevnebjbndgfpt.mp4">
-                </video> -->
+                </video>
+                <div class="movie-duration">
+                    <span>{{movie.duration}}</span>
+                </div>
             </div>
             <footer class="movie-details">
                 <a [routerLink]="['/watch', movies.studio.objectId, movie.objectId]" title="{{movie.title}}">{{movie.title | truncate:50 }}</a>
