--- a/src/app/components/movies/movies.component.scss
+++ b/src/app/components/movies/movies.component.scss
@@ -65,8 +65,6 @@ footer.movie-details {
 
 footer.movie-details a {
     color: inherit;
-    font-size: 1.1em;
-    font-weight: bold;
     text-decoration: none;
 }
 
@@ -102,6 +100,16 @@ footer.movie-details a {
     object-fit: cover;
     vertical-align: bottom;
     border-radius: 2px;
+}
+
+.movie-duration {
+    position: absolute;
+    top: .5rem;
+    right: .5rem;
+    border-radius: 2px;
+    background-color: rgba(0, 0, 0, .26);
+    color: rgba(255, 255, 255, .86);
+    padding: .25rem;
 }
 
 // .movie-item img.movie-thumbnail,
