--- a/src/assets/css/normalize.css
+++ b/src/assets/css/normalize.css
@@ -36,6 +36,10 @@ h1 {
     margin: 0;
 }
 
+h2 {
+    margin: 0;
+}
+
 /* Grouping content
      ========================================================================== */
 
